--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,12 @@
   </head>
 
   <body>
-    <%= yield %>
+    <nav class="navbar navbar-light bg-light">
+      <%= link_to icon('fas', 'bacon', "Yikes!"), restaurants_path, class: "navbar-brand" %>
+      <%= link_to "Add Restaurant", new_restaurant_path, class: "btn btn-dark" %>
+    </nav>
+    <div class="mt-4 container">
+      <%= yield %>
+    </div>
   </body>
 </html>
