added margin to bottom of page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
       <%= link_to icon('fas', 'bacon', "Yikes!"), restaurants_path, class: "navbar-brand" %>
       <%= link_to "Add Restaurant", new_restaurant_path, class: "btn btn-dark" %>
     </nav>
-    <div class="mt-4 container">
+    <div class="my-4 container">
       <%= yield %>
     </div>
   </body>
